--- a/doyolab/doyolab.css/style.css
+++ b/doyolab/doyolab.css/style.css
@@ -12,7 +12,7 @@ canvas {
     display: block;
     vertical-align: bottom;
 }
-
+/* Particles.js Container */
 /* Particles.js Container */
 #particles-js {
     position: absolute;
