--- a/doyolab/doyolab.css/SEAds.css
+++ b/doyolab/doyolab.css/SEAds.css
@@ -138,3 +138,12 @@ img {
   background-color: #1b6ca8;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
+
+#introduction {
+  padding: 20px;
+  background-color: #fff;
+  margin: 20px auto;
+  max-width: 800px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.05);
+  border-left: 5px solid #f5f5dc;
+}
